[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Objects/Scoopula.gd" type="Script" id=1]
[ext_resource path="res://Images/Spatula.png" type="Texture" id=2]
[ext_resource path="res://Scripts/DimensionSprite.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Objects/UI/ScoopulaMenu.gd" type="Script" id=4]
[ext_resource path="res://Images/FillSprites/scoopula_fill.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 49.5 )

[node name="Scoopula" type="RigidBody2D"]
z_index = 3
collision_layer = 2
gravity_scale = 0.0
script = ExtResource( 1 )
draggable = true
DisplayName = "Scoopula"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -9.53674e-07, -2.38419e-07 )
rotation = 1.57079
scale = Vector2( 0.0135876, 0.012674 )
texture = ExtResource( 2 )

[node name="FillSprite" type="Sprite" parent="."]
position = Vector2( -44, 0 )
scale = Vector2( 0.25, 0.1875 )
texture = ExtResource( 5 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -1.11063e-06 )
rotation = 1.57079
shape = SubResource( 1 )

[node name="ScoopulaMenu" type="PopupMenu" parent="."]
margin_left = 107.0
margin_top = 43.0
margin_right = 202.0
margin_bottom = 146.0
script = ExtResource( 4 )

[node name="PanelContainer" type="GridContainer" parent="ScoopulaMenu"]
margin_left = 9.0
margin_top = 8.0
margin_right = 93.0
margin_bottom = 90.0

[node name="sliderDispenseQty" type="HSlider" parent="ScoopulaMenu/PanelContainer"]
margin_right = 72.0
margin_bottom = 16.0
step = 0.01

[node name="lblDispenseQty" type="Label" parent="ScoopulaMenu/PanelContainer"]
margin_top = 20.0
margin_right = 72.0
margin_bottom = 34.0
text = "0"

[node name="btnDispense" type="Button" parent="ScoopulaMenu/PanelContainer"]
margin_top = 38.0
margin_right = 72.0
margin_bottom = 58.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Dispense"

[node name="btnCancel" type="Button" parent="ScoopulaMenu/PanelContainer"]
margin_top = 62.0
margin_right = 54.0
margin_bottom = 82.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Cancel"

[connection signal="value_changed" from="ScoopulaMenu/PanelContainer/sliderDispenseQty" to="ScoopulaMenu" method="_on_sliderDispenseQty_value_changed"]
[connection signal="pressed" from="ScoopulaMenu/PanelContainer/btnDispense" to="." method="_on_btnDispense_pressed"]
[connection signal="pressed" from="ScoopulaMenu/PanelContainer/btnCancel" to="ScoopulaMenu" method="_on_btnCancel_pressed"]
